# kito-project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  kito-project.cpp
common/: CMakeLists.txt
common/include/: asset_reader.h  input_manager.h  model.h  platform_factor.h  shader.h  texture.h  window_manager.h
engine/: CMakeLists.txt  CMakeLists.txt_  asset_manager.cc  asset_manager.h  game.cc  game.h  game_loop.h  kito_common.h  material.h  result.h
engine/render/: material.h
engine/scene/: model_node.h  scene.h  scene_node.cc  scene_node.h  scene_node_properties.h
engine/sudoku/: main.cc
engine/sudoku/scenes/: main_menu.cc  main_menu.h
example/: CMakeLists.txt  hello_triangle.cc
example/android/: CMakeLists.txt
example/pc_x64/: CMakeLists.txt  hello_triangle.cc
glfw-glue/: CMakeLists.txt
glfw-glue/src/: glfw_window_manager.cc  glfw_window_manager.h
include/glad/: glad.h
opengl-glue/: CMakeLists.txt  glad.c
opengl-glue/opengl/: glad.c  shader.cpp  shader.h  text_renderer.h  texture.cc  texture.h
res/shader/gl3/: fragment.glsl  text.frag  vertex.glsl
src/: game_loop.cc  global.h  kito_common.h  kito_project.cpp  kito_project.h  platform.h  render.h
src/glfw/: glfw_platform.cc  glfw_platform.h
src/math/: matrix_stack.cc  matrix_stack.h
src/opengl/: opengl_renderer.cc  resource_manager.cpp  resource_manager.h  shader.h  text_renderer.cc
src/render/: material.h  render_pass.h  renderer_interface.h
src/scene/: camera_node.cc  camera_node.h  root_node.cc  root_node.h  scene.cc  scene.h  scene_node.h  scene_node_interface.h  scene_node_properties.h
src/sudoku/: main.cc
src/sudoku/scenes/: main_menu.h
